@@ -1,9 +1,9 @@
 Bundle: VR
 Priority: recommended
 Contains: MASS class nnet spatial
-Version: 7.2-20
-Date: 2005-09-17
-Depends: R (>= 2.1.0), graphics, stats
+Version: 7.2-22
+Date: 2005-12-06
+Depends: R (>= 2.2.0), graphics, stats
 Suggests: lattice, nlme, survival
 Author: S original by Venables & Ripley.
   R port by Brian Ripley <ripley@stats.ox.ac.uk>, following earlier
@@ -13,4 +13,4 @@ BundleDescription: Functions and datasets to support Venables and
   Ripley, 'Modern Applied Statistics with S' (4th edition).
 License: GPL (version 2 or later)  See file LICENCE.
 URL: http://www.stats.ox.ac.uk/pub/MASS4/
-Packaged: Sat Sep 17 16:04:16 2005; ripley
+Packaged: Tue Dec  6 20:08:26 2005; ripley
