@@ -405,7 +405,6 @@ VR_onlineSOM(double *data, double *codes, double *nhbrdist,
     RANDOUT;
 }
 
-/*
 #include "R_ext/Rdynload.h"
 
 R_CMethodDef CEntries[] = {
@@ -423,4 +422,3 @@ void R_init_class(DllInfo *dll)
 {
     R_registerRoutines(dll, CEntries, NULL, NULL, NULL);
 }
-*/
