@@ -664,7 +664,6 @@ VR_summ2(Sint *n0, Sint *p0, Sint *q0, Sdata *Z, Sint *na)
     *na = j + 1;
 }
 
-/*
 #include "R_ext/Rdynload.h"
 
 R_CMethodDef CEntries[] = {
@@ -682,4 +681,3 @@ void R_init_nnet(DllInfo *dll)
 {
     R_registerRoutines(dll, CEntries, NULL, NULL, NULL);
 }
-*/
